# AuthTuna

./: .env  .gitignore  CONTRIBUTING.md  COOKIE_BEARER.md  LICENSE.txt  MANIFEST.in  SECURITY.md  create_manifest.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: ci.yml  publish-on-push.yml
authtuna/: __init__.py
authtuna-client/: middlewares.py
authtuna/authtuna-client/: integrations.py  manager.py  middlewares.py
authtuna/authtuna_client/: middlewares.py
authtuna/client/: exceptions.py  integrations.py  manager.py
authtuna/core/: __init__.py  config.py  database.py  defaults.py  encryption.py  exceptions.py  hooks.py  mfa.py  passkeys.py  social.py
authtuna/helpers/: __init__.py  mail.py  theme.py
authtuna/integrations/: __init__.py  fastapi_integration.py
authtuna/manager/: __init__.py  asynchronous.py
authtuna/middlewares/: __init__.py  session.py
authtuna/migrations/: __init__.py
authtuna/routers/: __init__.py  admin.py  auth.py  mfa.py  passkey.py  passwordless.py  social.py  ui.py
authtuna/rpc/: authtuna.proto  authtuna_pb2.py  authtuna_pb2_grpc.py  gen_proto_command.txt  server.py
authtuna_client/: config.py  integrations.py
docs/: CNAME  auth-flows.html  configuration.html  core-managers.html  database-models.html  dependencies.html  index.html  mfa.html  middleware-session.html  passkeys.html  permission-dependencies.html  rbac-management.html  ui-dashboard.html
docs_v2/: package-lock.json  package.json
docs_v2/app/: globals.css  (+2 more)
tests/: conftest.py  test_admin.py  test_admin_router.py  test_admin_router_coverage.py  test_api_keys_limits.py  test_async_manager.py  test_async_manager_coverage.py  test_auth.py  test_auth_router.py  test_core_mfa_social_cov.py  test_database.py  test_database_and_session.py  test_database_comprehensive.py  test_database_session_token_cov.py  test_encryption.py  test_fastapi_integration.py  test_gdpr.py  test_helpers.py  test_hooks_integration.py  test_integration.py  test_mail.py  test_mfa.py  test_mfa_router.py  test_mfa_router_cov.py  test_middleware.py  test_org_implementation.py  test_passkey_router.py  test_passkeys.py  test_passkeys_router.py  test_passwordless_router.py  test_role_manager.py  test_rpc_client.py  test_rpc_server.py  test_session_token_manager.py  test_social.py  test_social_router.py  test_social_router_cov.py  test_ui_router.py  test_ui_router_coverage.py  test_user_manager.py  (+1 more)
(+70 files in other folders)
