# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "authtuna"
version = "0.2.2"
authors = [
    { name="shashstormer", email="shashanka5398@gmail.com" },
]
description = "A high-performance, framework-agnostic authorization and session management library for Python"
readme = "readme.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["authentication", "authorization", "session", "fastapi", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=41.0.0",
    "pyotp>=2.8.0",
    "PyJWT>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "aiosmtplib>=2.0.0",
    "dkimpy>=1.1.0",
    "slowapi>=0.1.0",
    "authlib>=1.0.0",
    "ua-parser>=0.10.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "qrcode>=7.4.2",
    "aiosqlite>=0.20.0",
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
    "Jinja2>=3.0.0",
    "httpx",
    "itsdangerous",
    "uvicorn",
    "cbor2>=5.4.6",
    "python-multipart",
]

[project.optional-dependencies]
passkey = [
    "pillow", # For QR code generation
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "httpx>=0.28.1",
    "pytest-cov",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/shashstormer/authtuna"
Repository = "https://github.com/shashstormer/authtuna"
Documentation = "https://authtuna.shashstorm.in/"
Issues = "https://github.com/shashstormer/authtuna/issues"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
authtuna = [
    "templates/email/*.html",
    "templates/pages/*.html",
    "templates/dashboard/*.html",
]

